Fix issue with navbar menu overflow

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -140,7 +140,6 @@
 .navbar-menu {
   min-width: 240px;
   position: absolute;
-  top: -4rem;
   display: none;
   flex-direction: column;
   box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.19);
@@ -390,7 +389,7 @@
   background-color: #fff;
   z-index: 4;
   flex-grow: 1;
-  overflow-y: hidden;
+  position: relative;
 
   @include small {
     display: block;
@@ -409,10 +408,8 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    position: relative;
-    //maybe remove later
+    overflow-x: hidden;
     overflow-y: hidden;
-    overflow: visible;
 
     .navbar-top,
     .navbar-bottom {
@@ -504,10 +501,16 @@
     }
 
     .navbar-bottom {
-      position: relative;
+      // position: relative;
       z-index: 5;
+      overflow-x: visible;
       .navbar-row {
         margin-bottom: 20px;
+      }
+
+      .navbar-menu {
+        bottom: 5rem;
+        left: 1.75rem;
       }
     }
   }
